Main Page and Container Component
Created a component for the main page, and also a Container component to center the pages,

--- a/src/pages/CommentSectionPage.css
+++ b/src/pages/CommentSectionPage.css
@@ -1,7 +1,5 @@
-.App {
+.commenting-tool-page {
   display: flex;
   font-size: 40px;
   min-height: 100vh;
-  align-items: center;
-  justify-content: center;
 }
